--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.PrU2"
         tools:targetApi="31">
         <activity
+            android:name=".Lista"
+            android:exported="false" />
+        <activity
             android:name=".Olvide"
             android:exported="false" />
         <activity
